--- a/index.html
+++ b/index.html
@@ -2,122 +2,122 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>Casino Royal</title>
+    <title>NEON CASINO</title>
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <style>
-        /* 初期の青グラデーションデザインを厳守 */
-        body { 
-            background: linear-gradient(135deg, #0f172a 0%, #1a1a1a 100%); 
-            color: white; 
-            font-family: 'Hiragino Kaku Gothic Pro', sans-serif;
-            text-align: center; 
-            min-height: 100vh;
-            margin: 0;
+        /* ご提示いただいたデザインを適用 */
+        :root{
+            --bg:#050510;
+            --accent:#0ff;
+            --accent2:#ff00ff;
+            --panel:#0b0b1a;
+            --text:#e0ffff;
         }
-        header {
-            padding: 30px;
-            background: rgba(0,0,0,0.3);
-            border-bottom: 2px solid #1e40af;
+        *{ box-sizing:border-box; }
+        body{
+            margin:0;
+            min-height:100vh;
+            background: radial-gradient(circle at top, #202040 0, #050510 55%, #000 100%);
+            font-family: "Segoe UI", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+            color:var(--text);
+            text-align:center;
+            display:flex; flex-direction:column; align-items:center;
         }
-        .card { 
-            background: #1e293b; /* 初期の青ベース */
-            padding: 25px; 
-            margin: 15px; 
-            border-radius: 15px; 
-            display: inline-block; 
-            min-width: 320px; 
-            box-shadow: 0 10px 20px rgba(0,0,0,0.4);
-            border: 1px solid #334155;
+        header{ padding:25px 10px 10px; }
+        h1{
+            margin:0; font-size:2.6rem; letter-spacing:0.15em;
+            text-shadow: 0 0 10px var(--accent), 0 0 25px var(--accent2), 0 0 40px #fff;
         }
-        #slotDisplay { 
-            font-size: 50px; 
-            background: #020617; 
-            margin: 20px 0; 
-            padding: 20px; 
-            border-radius: 10px;
-            border: 2px solid #fbbf24;
-            letter-spacing: 5px;
+        h1 span{ display:inline-block; transform:skewX(-8deg); }
+        #chipBar{
+            margin-top:10px; display:inline-flex; align-items:center; gap:10px; padding:6px 14px;
+            border-radius:999px; background:linear-gradient(90deg,rgba(0,255,255,0.15),rgba(255,0,255,0.15));
+            border:1px solid rgba(0,255,255,0.5); box-shadow:0 0 15px rgba(0,255,255,0.4); font-weight:bold;
         }
-        input { 
-            width: 100px; 
-            padding: 10px; 
-            background: #0f172a;
-            color: white;
-            border: 1px solid #475569;
-            border-radius: 6px;
-            font-size: 1.1rem;
+        #chips{ font-size:1.4rem; color:#fff; text-shadow:0 0 8px var(--accent); }
+        main{
+            width:100%; max-width:1100px; padding:10px 15px 40px;
+            display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr)); gap:20px;
         }
-        button { 
-            padding: 10px 25px; 
-            cursor: pointer; 
-            background: #fbbf24;
-            border: none;
-            border-radius: 6px;
-            font-weight: bold;
-            color: #000;
+        .section{
+            position:relative; background:radial-gradient(circle at top left,#1a1a3a,#050510 60%);
+            border-radius:18px; padding:18px 16px 20px; border:1px solid rgba(0,255,255,0.4);
+            box-shadow: 0 0 25px rgba(0,255,255,0.25), 0 0 40px rgba(255,0,255,0.15); overflow:hidden;
         }
-        button:hover { background: #f59e0b; }
-        
-        #loginOverlay { 
-            position: fixed; 
-            inset: 0; 
-            background: rgba(0,0,0,0.95); 
-            display: flex; 
-            align-items: center; 
-            justify-content: center; 
-            z-index: 1000; 
+        .control-row{ display:flex; justify-content:center; gap:8px; margin-bottom:10px; }
+        input[type="number"], input[type="text"], input[type="password"] {
+            padding:6px 12px; border-radius:999px; border:1px solid rgba(0,255,255,0.6);
+            background:rgba(0,0,0,0.6); color:var(--text);
         }
-        .result { font-weight: bold; height: 30px; margin-top: 15px; font-size: 1.2rem; }
-        #log { margin-top: 30px; font-size: 12px; color: #94a3b8; }
+        button{
+            background:linear-gradient(135deg,#111,#222); color:var(--accent);
+            border-radius:999px; border:1px solid rgba(0,255,255,0.7); padding:7px 18px;
+            cursor:pointer; font-weight:600; transition: 0.1s;
+        }
+        button:hover{ background:var(--accent); color:#000; box-shadow:0 0 12px var(--accent); }
+        .slot-frame{
+            font-size:2.4rem; margin:10px 0; padding:6px 16px; border-radius:14px;
+            border:1px solid rgba(0,255,255,0.6); background:rgba(0,0,0,0.5);
+        }
+        .result{ margin-top:8px; min-height:22px; font-weight:bold; }
+        .win{ color:#00ff9d; text-shadow:0 0 8px #00ff9d; }
+        .lose{ color:#ff4d6a; text-shadow:0 0 8px #ff4d6a; }
+        #loginOverlay {
+            position: fixed; inset: 0; background: var(--bg);
+            display: flex; justify-content: center; align-items: center; z-index: 1000;
+        }
     </style>
 </head>
 <body>
 
 <div id="loginOverlay">
-    <div class="card">
-        <h2 style="color:#fbbf24;">CASINO LOGIN</h2>
-        <p>名前とパスワードを決めて入店</p>
-        <input type="text" id="uName" placeholder="プレイヤー名"><br><br>
-        <input type="password" id="uPass" placeholder="パスワード"><br><br>
-        <button onclick="login()">入店する</button>
-        <p id="err" style="color:#f87171; margin-top:15px;"></p>
+    <div class="section" style="width:320px;">
+        <h2 style="color:var(--accent);">LOGIN / SIGNUP</h2>
+        <div style="margin-top:20px;">
+            <input type="text" id="uName" placeholder="PLAYER NAME" style="width:100%; margin-bottom:10px;"><br>
+            <input type="password" id="uPass" placeholder="PASSWORD" style="width:100%; margin-bottom:20px;"><br>
+            <button onclick="login()" style="width:100%;">ACCESS SYSTEM</button>
+            <p id="err" style="color:var(--accent2); font-size:0.8rem; margin-top:10px;"></p>
+        </div>
     </div>
 </div>
 
 <header>
-    <h1 style="color:#fbbf24;">🎰 MY CASINO ROYAL</h1>
-    <div style="font-size: 1.2rem;">
-        プレイヤー: <span id="myName">-</span> | 
-        チップ: <span id="chips" style="color:#fbbf24;">0</span> 枚
+    <h1><span>NEON</span> CASINO</h1>
+    <div id="chipBar">
+        STATUS: <span id="chips">0</span> CHIPS
     </div>
+    <div style="margin-top:10px; font-size:0.9rem;">PLAYER: <span id="myName">-</span></div>
 </header>
 
-<div class="card">
-    <h3>SLOT MACHINE</h3>
-    <div id="slotDisplay">🍒 💎 7️⃣</div>
-    <div style="margin-bottom: 10px;">
-        BET: <input type="number" id="sBet" value="100">
+<main>
+    <div class="section">
+        <div class="section-title"><span class="label">Cyber Slot</span></div>
+        <div class="slot-frame" id="slotDisplay">🍒 💎 7️⃣</div>
+        <div class="control-row">
+            <input type="number" id="sBet" value="100" min="10">
+            <button onclick="spin()">SPIN</button>
+        </div>
+        <div id="sRes" class="result"></div>
     </div>
-    <button onclick="spin()">SPIN!</button>
-    <div id="sRes" class="result"></div>
-</div>
 
-<div class="card">
-    <h3>HIGH & LOW</h3>
-    <p style="color:#94a3b8; font-size:0.8rem;">ディーラーに勝てば2倍配当</p>
-    <div style="margin-bottom: 10px;">
-        BET: <input type="number" id="dBet" value="100">
+    <div class="section">
+        <div class="section-title"><span class="label">High & Low</span></div>
+        <div style="margin:20px 0; font-size:0.9rem; opacity:0.8;">BEAT THE DEALER'S CARD</div>
+        <div class="control-row">
+            <input type="number" id="dBet" value="100" min="10">
+            <button onclick="double()">DUEL</button>
+        </div>
+        <div id="dRes" class="result"></div>
     </div>
-    <button onclick="double()">勝負</button>
-    <div id="dRes" class="result"></div>
-</div>
 
-<div class="card" style="text-align: left;">
-    <h4 style="color:#fbbf24; margin-top:0;">🏆 TOP 5</h4>
-    <div id="rList"></div>
-</div>
+    <div class="section">
+        <div class="section-title"><span class="label">Ranking</span></div>
+        <div id="rList" style="text-align:left; padding:10px; font-size:0.9rem;"></div>
+    </div>
+</main>
 
-<div id="log"></div>
+<div id="log" style="width:100%; padding:20px; font-size:0.8rem; color:rgba(0,255,255,0.4); border-top:1px solid rgba(0,255,255,0.1);"></div>
 
 <script>
     const socket = io();
@@ -125,8 +125,8 @@
 
     function login() {
         const name = document.getElementById('uName').value;
-        const pass = document.getElementById('uPass').value;
-        if(name && pass) socket.emit('login_request', {name, password: pass});
+        const password = document.getElementById('uPass').value;
+        if(name && password) socket.emit('login_request', {name, password});
     }
 
     socket.on('login_success', d => {
@@ -140,7 +140,7 @@
 
     function spin() {
         const bet = parseInt(document.getElementById('sBet').value);
-        if(bet > myChips) return alert("チップ不足");
+        if(bet > myChips) return alert("INSUFFICIENT CHIPS");
         socket.emit('spin_request', {bet});
     }
 
@@ -156,15 +156,15 @@
                 display.textContent = d.result.join(" ");
                 myChips = d.newChips;
                 document.getElementById('chips').textContent = myChips.toLocaleString();
-                resEl.textContent = d.win > 0 ? "WIN! +" + d.win : "LOSE";
-                resEl.style.color = d.win > 0 ? "#4ade80" : "#f87171";
+                resEl.className = "result " + (d.win > 0 ? "win" : "lose");
+                resEl.textContent = d.win > 0 ? "WIN +" + d.win : "LOSE";
             }
         }, 50);
     });
 
     function double() {
         const bet = parseInt(document.getElementById('dBet').value);
-        if(bet > myChips) return alert("チップ不足");
+        if(bet > myChips) return alert("INSUFFICIENT CHIPS");
         socket.emit('double_up_request', {bet});
     }
 
@@ -172,13 +172,13 @@
         myChips = d.newChips;
         document.getElementById('chips').textContent = myChips.toLocaleString();
         const resEl = document.getElementById('dRes');
+        resEl.className = "result " + (d.win > 0 ? "win" : "lose");
         resEl.textContent = d.message;
-        resEl.style.color = d.win > 0 ? "#4ade80" : "#f87171";
     });
 
     socket.on('update_ranking', list => {
         document.getElementById('rList').innerHTML = list.map((u, i) => 
-            `<div>${i+1}. ${u.name}: ${u.chips.toLocaleString()}枚</div>`).join("");
+            `<div style="margin-bottom:5px;">${i+1}. ${u.name} - ${u.chips.toLocaleString()}</div>`).join("");
     });
 
     socket.on('broadcast', m => {
