--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>NEON CASINO</title>
+    <title>YAWATA CASINO</title>
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <style>
         /* ご提示いただいたデザインを適用 */
@@ -188,3 +188,4 @@
 </script>
 </body>
 </html>
+
