--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </div>
 
 <header>
-    <h1><span>NEON</span> CASINO</h1>
+    <h1><span>YAWATA</span> CASINO</h1>
     <div id="chipBar">
         STATUS: <span id="chips">0</span> CHIPS
     </div>
@@ -188,4 +188,5 @@
 </script>
 </body>
 </html>
+
 
