--- a/index.html
+++ b/index.html
@@ -647,24 +647,24 @@ socket.on('hl_setup', d => {
 });
 
 socket.on('hl_result', d => {
-    // 1枚前のカードを表示
-    renderCards('hlCurrent', [d.oldCard]); 
+    // 安全装置：カードデータがある時だけ描画（これで rank undefined エラーを阻止）
+    if (d.oldCard) {
+        renderCards('hlCurrent', [d.oldCard]); 
+    }
+
     const res = document.getElementById('hlRes');
     res.textContent = d.msg;
     
-    // 【修正】文字判定ではなく、d.win (true/false) で色と継続を判定する
+    // d.win が true なら継続、false なら終了
     if (d.win === true) {
-        res.className = "result win"; // 緑/青文字にする
-        // 勝った時は、コレクトボタンを有効化して「続行」させる
+        res.className = "result win"; // 勝利（青/緑）
         const collectBtn = document.querySelector("button[onclick='collectHL()']");
         if(collectBtn) {
             collectBtn.style.opacity = "1";
             collectBtn.disabled = false;
         }
-        // 継続中なのでボタンは hlActions のまま（何もしない）
     } else {
-        res.className = "result lose"; // 赤文字にする
-        // 負けた時、またはコレクト（回収）成功時は、DEALに戻す
+        res.className = "result lose"; // 敗北（赤）
         document.getElementById('hlInit').style.display = 'flex';
         document.getElementById('hlActions').style.display = 'none';
         
@@ -731,6 +731,7 @@ socket.on('chat_history', (msgs) => {
 </script>
 </body>
 </html>
+
 
 
 
