--- a/index.html
+++ b/index.html
@@ -269,6 +269,11 @@ body.clicker-mode button {
 </header>
 
 <main>
+
+    <a href="/apm-test/index.html">
+  <button class="menu-button">APMテストへ</button>
+</a>
+
     <div class="section">
         <div class="section-title"><span class="label">Cyber Slot</span></div>
         <div id="gogoLamp" style="color: #222; font-weight: bold; font-size: 1.5rem;">GOGO!</div>
@@ -732,6 +737,7 @@ socket.on('chat_history', (msgs) => {
 </script>
 </body>
 </html>
+
 
 
 
