--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ body.clicker-mode button {
 
 <main>
 
-    <a href="/apm-test/index.html">
+    <a href="/public/index.html">
   <button class="menu-button">APMテストへ</button>
 </a>
 
@@ -737,6 +737,7 @@ socket.on('chat_history', (msgs) => {
 </script>
 </body>
 </html>
+
 
 
 
